--- a/style/style.css
+++ b/style/style.css
@@ -15,8 +15,13 @@ margin - внешний отступ (поле)    (после границы)
 div h1 - наследует все элементы (потомки) <h1> блока <div>
 div > h1 - наследует только те (дочерний элемент) <h1>,которые являются непосредственными детьми элемента <div>
 
-Если браузер располагает два строчных элемента один за другим... - и у этих элементов есть поля, то браузер сложит размер полей
-Если браузер располагает два блочных элемента один под другим, он превращает их поля в одно. Высота полученного поля равняется высоте большего из двух полей.
+Если браузер располагает два строчных элемента один ЗА другим... - и у этих элементов есть поля, то браузер сложит размер полей
+Если браузер располагает два блочных элемента один ПОД другим, он превращает их поля в одно. Высота полученного поля равняется высоте большего из двух полей.
+
+Строчное содержимое, вложенное в блочный элемент, всегда обтекает плавающий элемент (float), принимая во внимание его границы, 
+в то время как блочные элементы заливаются на страницу в обычном режиме. 
+Исключение составляет тот случай, когда вы задаете свойство clear для блочного элемента, 
+в результате чего он смещается вниз до тех пор, пока справа, слева или с обеих сторон не будет никаких плавающих элементов.
 */
 body {
 	
@@ -45,16 +50,17 @@ div.FlexTop {
 	padding-left: 2%;
 	border-top: solid #eda024;
 	border-left: solid #eda024;
+	border-width: medium;
 	width: fit-content; /* Автозаполнение по ширине блока, учитывая размер контента*/
 	height: fit-content;
 }
  
-#abbreviations {
-	
-}
-
 #abbreviations h4{
 	margin-top: 0;
+}
+
+.abbreviatura {
+	cursor: pointer;
 }
 
 .hide {
@@ -78,10 +84,14 @@ img {
 }
 
 button {
-	min-width: 150px;
-	max-width: 200px;
-	min-height: 35px;
-	max-height: 35px;
+	width: 230px;
+	height: 35px;
+	font-weight: bold;
+	background-color: #FA7D55; /*#F4581E*/
+	border: none;
+	/*border: 2px solid;*/
+	border-radius: 20px;
+	cursor: pointer;
 }
 
 
