--- a/style/style.css
+++ b/style/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 #theme h1{
-	color: #2aa52a; /* Цвет текста */
+	color: #000; /* Цвет текста */
 	text-align: center; /* Горизонтальное выравнивание текста в пределах элемента. Применяется: ко всем элементам */
 }
 
@@ -50,7 +50,7 @@ div.FlexTop {
 	padding-left: 2%;
 	border-top: solid #eda024;
 	border-left: solid #eda024;
-	border-width: medium;
+	border-width: medium; /* Толщина границы */
 	width: fit-content; /* Автозаполнение по ширине блока, учитывая размер контента*/
 	height: fit-content;
 }
@@ -65,6 +65,23 @@ div.FlexTop {
 
 .hide {
 	display: none;
+	visibility: collapse;
+	animation: fadeInOut 0.5s ease-in;
+}
+
+.hide.clicked{
+	display: inline;
+	visibility: visible;
+}
+
+@keyframes fadeInOut { 
+    0% { 
+        opacity: 0;
+    }
+	
+    100% { 
+        opacity: 1;
+    } 
 }
 
 #new, #crime, #cancel {
@@ -84,16 +101,35 @@ img {
 }
 
 button {
-	width: 230px;
-	height: 35px;
-	font-weight: bold;
-	background-color: #FA7D55; /*#F4581E*/
-	border: none;
-	/*border: 2px solid;*/
-	border-radius: 20px;
 	cursor: pointer;
+	width: 230px;
+	height: 40px;
+	font-weight: bold;
+	background-color: #ff9b7a;
+	border: 3px solid rgba(0, 0, 0, 0); /* Сокращенная запись, порядок параметров может быть любым */
+	border-radius: 20px; /* Закругление углов границы */	
+}
+/*
+.button::before {
+	border-top: 2px solid;
+	border-right: 2px solid;
+	animation: border-top 2s infinite alternate;
+	
 }
 
+@keyframes border-top {
+	0% {width: 0px; height:0px;}
+	50% {width: 230px; height:0px;}
+	100% {width: 230px; height:40px;}
+}
+*/
+
+
+button:hover {
+	transition: 0.75s ease;
+	background-color: #F4581E;
+	border-color: rgba(0, 0, 0, 1);
+}
 
 /*
 max-width и min-width => Размер экрана Браузера
@@ -105,9 +141,8 @@ max-device-width и min-device-width => Фактический размер эк
 /* Ширина экрана больше 1400px (ширина от 1400px) */
 @media screen and (min-width: 1400px) {
 	/* Фиксированный размер блока */
-	div.FlexItem>div {
-		max-width: 700px;
-		min-width: 700px;
+	div.FlexItem div {
+		width: 700px;
 	}
 }
 
